Terraform7/security-group.tf
resource "aws_security_group" "mysg1"{
    name="oursg"
    ingress{
        to_port=22
        from_port=22
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]
    }
    ingress{
        to_port=80
        from_port=80
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]
    }
    egress{
        to_port=0
        from_port=0
        protocol="-1"
        cidr_blocks=["0.0.0.0/0"]
    }
}
